--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ blinker==1.7.0
 click==8.1.7
 Flask==3.0.2
 Flask-Cors==4.0.0
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 numpy==1.26.4
+packaging==23.2
 pillow==10.2.0
 pyembroidery==1.5.0
 scipy==1.12.0
